@startuml
interface LetterProcess{
+writeContext(String):void
+fillEnvelope(String):void
+letterInotoEnvelope():void
+sendLetter():void
}

class LetterProcessImpl{
+writeContext(String):void
+fillEnvelope(String):void
+letterInotoEnvelope():void
+sendLetter():void
}

class Client{
+{static}main(String[]):void
}

LetterProcess <|.. LetterProcessImpl
LetterProcessImpl <.. Client

@enduml